--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <label><input type="checkbox" />Remember me</label>
           <a href="#">forgot passsword?</a>
         </div>
-        <button type="submit" class="btn">Login</button>
+        <button type="submit" class="btn"><a href="https://alfiandwi1.github.io/">Login</a> </button>
         <div class="register-link">
           <p>Don't have an account? <a href="#">Register?</a></p>
         </div>
